Fix too tall diploma image

--- a/ssg/styles/main.css
+++ b/ssg/styles/main.css
@@ -21,6 +21,10 @@ img, video {
 	max-width: 100%;
 }
 
+details img[alt*="Saxion diploma"] {
+	height: unset;
+}
+
 .mono-font {
 	font-family: "JetBrainsMono NF", "JetBrains Mono", "ui-monospace", "SFMono-Regular", "SF Mono", "Menlo", "Consolas", "Liberation Mono", monospace;
 }
